--- a/gb/21/8/10/n13153051.md
+++ b/gb/21/8/10/n13153051.md
@@ -1,21 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wlaqea3326/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/wlaqea3326/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/wlaqea3326/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wlaqea3326/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/wlaqea3326/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wlaqea3326/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/wlaqea3326/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wlaqea3326/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/wlaqea3326/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wlaqea3326/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/wlaqea3326/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wlaqea3326/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/wlaqea3326/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wlaqea3326/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/wlaqea3326/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wlaqea3326/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/wlaqea3326/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wlaqea3326/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/wlaqea3326/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wlaqea3326/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wlaqea3326/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wlaqea3326/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wlaqea3326/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【新闻看点】战狼嘲军方软弱 军头向习“交底”？</h2>
-<a href="https://git.io/JRKHj"><img width="600" src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wlaqea3326/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
-<h6>战狼嘲军方软弱，军队不服从命令？习近平真会慌。（《新闻看点》提供）
-</h6>
+<a href="https://dryak9kcfpt3j.cloudfront.net/J4trhtxXh"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<h6></h6>
 <hr>
-	<p>【大纪元2021年08月10日讯】大家好，欢迎大家关注《<ahref="https://github.com/wlaqea3326/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>》，我是李沐阳。今天是美东时间8月10日（星期二），亚洲时间是8月11日（星期三）。</p>
+	<p>【大纪元2021年08月10日讯】大家好，欢迎大家关注《<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>》，我是李沐阳。今天是美东时间8月10日（星期二），亚洲时间是8月11日（星期三）。</p>
 <p>今天焦点：中共撤大使，立陶宛继续友台；加公民命悬一线，加国司法受大考；抵制冬奥日盛，世界不为中共站台；战狼嘲军方软弱，军队不服从命令？习近平慌了！被封居民哭求助，扬州男子跳楼。</p>
 <p>中纪委官网10日晚上通报，东部机场集团党委书记、董事长冯军，党委副书记、总经理徐勇，涉嫌严重违纪违法，目前正接受江苏省审查调查。</p>
 <p>纽约州民主党籍州长库默11日宣布，将在14天内辞职。纽约州检察总长詹乐霞3日的民事调查报告披露，库默曾对11名女性性骚扰。最新消息显示，指控库默性骚扰的人数已经达到了13人。</p>
 <p>10日，美国联邦参议院以69对30票通过金额高达1万2,000亿美元的加强基础建设现代化法案。法案将送交众院审议。拜登形容这是一项“历史性”法案。</p>
 <p>香港教育专业人员协会10日宣布解散，结束48年为教师争取权益的工作。会长冯伟华形容，决定是“突然……无奈、艰难和痛心”。这是对全盘环境及形势的分析，压力大，情况恶劣，看不到前景。</p>
 <p>截止到美东时间8月10日下午2点，全球新增确诊中共病毒（武汉病毒、新冠病毒）人数52万2,385人，总确诊人数达到了2亿0409万8,564人；单日死亡7,535人，累积死亡总数是431万5,487人。</p>
-<div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://git.io/JRKHj"><img width="600" src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wlaqea3326/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/QszmbHt8sa8?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
-	</div>
-<p>下面进入今天的话题。因为立陶宛坚决要跟台湾发展互惠友好关系，中共召回了驻立陶宛大使。又因为<ahref="https://github.com/wlaqea3326/djy/blob/master/gb/tag/%E5%AD%9F%E6%99%9A%E8%88%9F.md#1">孟晚舟</a>引渡案进入关键阶段，中共对加拿大实施了进一步施压。但是这些事，很可能加剧世界对北京冬奥会的抵制。</p>
+<p><center><a src=""></a><a href="https://dryak9kcfpt3j.cloudfront.net/J4trhtxXh"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/6704350a-a67e-4e18-bbd5-7bfb9befdaa7?r=16x9&amp;d=1908" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>下面进入今天的话题。因为立陶宛坚决要跟台湾发展互惠友好关系，中共召回了驻立陶宛大使。又因为<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%AD%9F%E6%99%9A%E8%88%9F.md#1">孟晚舟</a>引渡案进入关键阶段，中共对加拿大实施了进一步施压。但是这些事，很可能加剧世界对北京冬奥会的抵制。</p>
 <p>习近平最近很可能恐慌了，因为中共军方可能向他交底摊牌了，不会跟美国等世界联军打仗。习近平的命令不好使，这意味着什么呢？</p>
 <h2>中共气炸撤大使 立陶宛继续友台</h2>
 <p>今天（10日），中共召回了驻立陶宛大使，并且要求立陶宛召回驻中共大使。中共的理由是，立陶宛“允许台湾当局以‘台湾’名义设立代表处”。对北京当局的决定，立陶宛虽然表示“遗憾”，但是决议与台湾发展外交互惠关系。</p>
@@ -28,8 +25,8 @@
 <p>帕维里奥尼斯表示，尽管中共试图制裁立陶宛，但“不需要去关注”。因为立陶宛正在与技术最先进的国家发展关系，包括印度、澳洲、台湾等等。</p>
 <p>他强调，立陶宛对中共“最好的回应”，就是“继续团结民主世界，加强与民主国家之间的联系、经济关系，为立陶宛企业寻找稳定、有利的新市场”。</p>
 <p>中共以为“金钱是万能”的，经济利益可以驱动一切，但是立陶宛用实际行动给北京领导人上了一课。立陶宛也需要发展经济，但在经济利益之上，还有更宝贵的东西。不知道立陶宛的言传身教，会不会让传闻只有小学水平的北京领导人学到些什么。</p>
-<h2><ahref="https://github.com/wlaqea3326/djy/blob/master/gb/tag/%E7%BE%8E%E5%8F%B0%E5%85%B3%E7%B3%BB.md#1">美台关系</a>“巅峰” 中共为何不召回大使？</h2>
-<p>实际上，北京召回大使就是对立陶宛的国际霸凌。用民间的说法，就是中共在耍流氓，以大欺小。现在<ahref="https://github.com/wlaqea3326/djy/blob/master/gb/tag/%E7%BE%8E%E5%8F%B0%E5%85%B3%E7%B3%BB.md#1">美台关系</a>几乎要取代美中关系了，可是中共死也不肯说召回大使这句话。</p>
+<h2><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%BE%8E%E5%8F%B0%E5%85%B3%E7%B3%BB.md#1">美台关系</a>“巅峰” 中共为何不召回大使？</h2>
+<p>实际上，北京召回大使就是对立陶宛的国际霸凌。用民间的说法，就是中共在耍流氓，以大欺小。现在<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%BE%8E%E5%8F%B0%E5%85%B3%E7%B3%BB.md#1">美台关系</a>几乎要取代美中关系了，可是中共死也不肯说召回大使这句话。</p>
 <p>2020年，因为中共病毒甩锅等系列问题，美中关系江河日下。川普（特朗普）政府当时一怒之下，召回了驻华大使布兰斯塔德。这个惊人动作，谁都看得出背后所传递的信号，就是在暗示要与中共断交，但是中共没有任何回应。</p>
 <p>美国无数次踩踏中共的“红线”、“底线”，军机堂堂正正进出台湾，美国对台湾大笔军售。甚至有消息传出，美国特战队曾到台湾，直接帮助中华民国军队训练。</p>
 <p>今天（10日），美国在台协会台北办事处处长孙晓雅与中华民国总统蔡英文进行了会面。孙晓雅说“台美关系正处于巅峰状态，是史上最佳”。她表示未来美台各领域都将强化拓展，向前迈进。</p>
@@ -40,8 +37,8 @@
 <p>明眼人都能看出来，中共就是要在立陶宛身上杀一儆百，以阻止更多国家纷纷效仿，都与台湾发展关系。如果到了这一步，中共国际挖角台湾的图谋就会彻底失灵，也会更加凸显出北京当局的“失道寡助”和众叛亲离。</p>
 <p>所以中共要这么做，目的是让其它国家看到“后果很可怕”。中共想得挺美，可是效果却适得其反，偏偏立陶宛不惧怕流氓。国家虽然不大，但是朝野上下都非常有傲骨，把中共的脸打得啪啪响。</p>
 <p>我一再说，现在是天灭中共的时刻，所有的一切，都在朝着这个方向走。</p>
-<h2>加公民仍判死刑 中共力救<ahref="https://github.com/wlaqea3326/djy/blob/master/gb/tag/%E5%AD%9F%E6%99%9A%E8%88%9F.md#1">孟晚舟</a>施压</h2>
-<p>今天（10日），辽宁省高院对<ahref="https://github.com/wlaqea3326/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7%E5%85%AC%E6%B0%91%E8%B0%A2%E4%BC%A6%E4%BC%AF%E6%A0%BC.md#1">加拿大公民谢伦伯格</a>案做出了宣判，维持死刑原判。辽宁高院在新闻稿中称，谢伦伯格“参与有组织的国际贩毒活动，伙同他人走私甲基苯丙胺（冰毒）222.035千克”。目前谢伦伯格已经提出了上诉。</p>
+<h2>加公民仍判死刑 中共力救<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%AD%9F%E6%99%9A%E8%88%9F.md#1">孟晚舟</a>施压</h2>
+<p>今天（10日），辽宁省高院对<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7%E5%85%AC%E6%B0%91%E8%B0%A2%E4%BC%A6%E4%BC%AF%E6%A0%BC.md#1">加拿大公民谢伦伯格</a>案做出了宣判，维持死刑原判。辽宁高院在新闻稿中称，谢伦伯格“参与有组织的国际贩毒活动，伙同他人走私甲基苯丙胺（冰毒）222.035千克”。目前谢伦伯格已经提出了上诉。</p>
 <p>在中共宣判后，加拿大外交部长加诺很快发了一份声明，强烈谴责中共对谢伦伯格的死刑判决。“谴责对谢伦伯格先生刑罚的任意性。”</p>
 <p>加拿大驻中国大使鲍达民也表示了谴责，并呼吁中方宽大处理。鲍达民直言，中共宣布对谢伦伯格的判决，这个时间加拿大正在审理孟晚舟案，“这不是巧合”。</p>
 <p>鲍达民已经说到了问题的实质，对谢伦伯格的宣判，中共的目的非常明确。这就是对加拿大的极限施压，用谢伦伯格的案子，迫使加拿大法院释放有中共“第二国母”之称的华为公主孟晚舟。</p>
@@ -103,7 +100,7 @@
 <p>目前不清楚这名男子跳楼的具体原因是什么，但是网友在邮件中写道，中高风险小区不光是小区被封，周围的马路被封，完全与世隔绝，而且粮食短缺。甚至有的住户家门被钉死，分配的食物又没有人员逐户配送，都堆积在小区门口，只能发臭。</p>
 <p>网友说“中共的这种不人道的做法，也许可以控制疫情，但是把百姓当牲口一样管理，一人阳性，整个小区长期封锁的做法实在过分”。“中共治下，人民如草芥，世间如地狱”。</p>
 <p>现在中共的消息控制非常严密，我查不到更多的消息。所以我希望所有疫区的朋友，如果有可能，请尽量多向我们提供一些及时、准确的信息。另外也请大家帮忙把当地人讲话听打出来，这样可以帮助我们更准确地曝光。</p>
-<p>我们的爆料邮箱是xwkd2017@gmail.com，《<ahref="https://github.com/wlaqea3326/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>》是您永远的朋友。</p>
+<p>我们的爆料邮箱是xwkd2017@gmail.com，《<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>》是您永远的朋友。</p>
 <h2>《真实中国》画展</h2>
 <p>接下来继续为大家展示《真实中国》的征画作品。</p>
 <p>今天还是只能为您展示一幅画作，因为我们的节目有点太长了，请大家原谅。这幅画作的名字叫“监控”。</p>
@@ -134,41 +131,35 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wlaqea3326/djy/blob/master/gb/21/8/5/n13142012.md#1">【新闻看点】超大军演美中隔空叫板 郑州爆疫情</a></li>
-<li><a href="https://github.com/wlaqea3326/djy/blob/master/gb/21/8/6/n13144788.md#1">【新闻看点?】多地爆疫情封城 孙春兰喊刻不容缓</a></li>
-<li><a href="https://github.com/wlaqea3326/djy/blob/master/gb/21/8/7/n13146392.md#1">【新闻看点】央视罕见评疫情重 印度神童又命中</a></li>
-<li><a href="https://github.com/wlaqea3326/djy/blob/master/gb/21/8/9/n13150804.md#1">【新闻看点】风暴袭北京 疫情严峻四千人支援扬州</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/8/5/n13142012.md#1">【新闻看点】超大军演美中隔空叫板 郑州爆疫情</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/8/6/n13144788.md#1">【新闻看点?】多地爆疫情封城 孙春兰喊刻不容缓</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/8/7/n13146392.md#1">【新闻看点】央视罕见评疫情重 印度神童又命中</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/8/9/n13150804.md#1">【新闻看点】风暴袭北京 疫情严峻四千人支援扬州</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/wlaqea3326/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/29/n10004659.md#1" target="_blank">共产暴政录：批判武训，拒绝特蕾莎修女</a></li><li><a href="https://github.com/wlaqea3326/djy/blob/master/gb/12/12/28/n3763495.md#1" target="_blank">洪愿：告诉你真实的法轮功（一）</a></li><hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/14/n9958294.md#1" target="_blank">金剑：中央集权制绝对不是封建社会（之二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/11/n11315892.md#1" target="_blank">河北一位电器维修师无悔的信念</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/5/n13141850.md#1">【未解之谜】画出天堂的神童</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/3/n13136702.md#1">【方菲访谈】专访李有甫：我的寻道之路</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/7/24/n13112797.md#1">病的背后有灵体？古今奇闻揭晓人体秘密</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/7/23/n13108844.md#1">【命理】诱骗妇孺家产 一家十几人皆死</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/6/24/n13044275.md#1">【医案】父亲节礼物</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/9/n13148894.md#1">【拍案惊奇】中共砸钱造金牌 多少选手下场凄惨</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/9/n13150763.md#1">【有冇搞错】毁掉中国首面奥运金牌的奇案</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/9/n13150804.md#1">【新闻看点】风暴袭北京 疫情严峻四千人支援扬州</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/7/26/n13117299.md#1">【东京奥运】奖牌榜及金牌榜（8月8日）</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/6/n13142391.md#1">除杂货外 Costco还出售8种意想不到的东西</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/7/n13145076.md#1">中俄军力对比 更现实的近邻威胁（三）</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/10/n13151042.md#1">曾受周星驰邀请演男孩 24岁女星徐娇近况曝光</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/7/n13146528.md#1">因不愿下跪遭中共撤三部戏 柯宇纶霸气回应</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/8/n13148300.md#1">为减肥只吃“一根面条” 黄晓明遭宁静吐槽</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/7/n13146718.md#1">林书豪接种疫苗后仍染疫 好友萧敬腾关心致意</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/9/n13149577.md#1">《不可能的任务7》将杀青 女星晒与阿汤哥合照</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/9/n13149029.md#1">伊朗空手道选手被踢倒在地 却“躺着拿金牌”</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/9/n13150639.md#1">很多人洗碗筷的方法错了！教你正确清洗妙招</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/6/n13144336.md#1">吃蔬菜可能出现血栓？服用一种药物者要小心</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/8/n13147196.md#1">美国女子被取消航班 结果中了百万美元乐透</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/8/n13147903.md#1">罕见 400磅重鲟鱼从河面跃过垂钓者头顶</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11950860.md#1">以色列作家：真正的病毒是中共</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11950430.md#1">【现场视频】大风吹袭 京津冀多地起火</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11953240.md#1">台湾北部高中2人确诊中共肺炎 被迫全校停课</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11948757.md#1">【翻墙必看】剖析“中共病毒”毒性大发内幕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wlaqea3326/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wlaqea3326/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/10/n13153051.htm">【新闻看点】战狼嘲军方软弱 军头向习“交底”？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/10/n13153051.htm">【新闻看点】战狼嘲军方软弱 军头向习“交底”？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wlaqea3326/djy/blob/master/gb/21/8/10/n13153051.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wlaqea3326/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wlaqea3326/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wlaqea3326/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/21/8/10/n13153051.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
