--- a/gb/21/8/10/n13153515.md
+++ b/gb/21/8/10/n13153515.md
@@ -1,16 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wlaqea3326/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/wlaqea3326/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/wlaqea3326/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wlaqea3326/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/wlaqea3326/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wlaqea3326/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/wlaqea3326/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wlaqea3326/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/wlaqea3326/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wlaqea3326/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/wlaqea3326/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wlaqea3326/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/wlaqea3326/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wlaqea3326/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/wlaqea3326/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wlaqea3326/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/wlaqea3326/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wlaqea3326/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/wlaqea3326/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wlaqea3326/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wlaqea3326/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wlaqea3326/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wlaqea3326/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wlaqea3326/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>【秦鹏直播】党媒造假被瑞士辟谣 环时也闹笑话</h2>
-<a href="https://git.io/JRKna"><img width="600" src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wlaqea3326/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
-<h6>《人民日报》造谣，惨被瑞士大使馆打脸！ 《环球》气疯，咒民主党败选。（《秦鹏直播》提供）
-</h6>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>【秦鹏直播】党媒造假被瑞士揭穿 环时也闹笑话</h2>
+<a href="https://divmj5v44rbg.cloudfront.net/V7zT9xBEb"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<h6></h6>
 <hr>
-	<p>【大纪元2021年08月11日讯】大家好，现在是美东时间8月10日晚上6:30，北京时间8月11日。欢迎收看时事天天聊。我是Sydney（王愉贺），我是秦鹏。</p>
-<p>今天焦点：《<ahref="https://github.com/wlaqea3326/djy/blob/master/gb/tag/%E4%BA%BA%E6%B0%91%E6%97%A5%E6%8A%A5.md#1">人民日报</a>》编造瑞士科学家，惨被<ahref="https://github.com/wlaqea3326/djy/blob/master/gb/tag/%E7%91%9E%E5%A3%AB%E9%A9%BB%E5%8D%8E%E5%A4%A7%E4%BD%BF%E9%A6%86.md#1">瑞士驻华大使馆</a>辟谣打脸！《<ahref="https://github.com/wlaqea3326/djy/blob/master/gb/tag/%E7%8E%AF%E7%90%83%E6%97%B6%E6%8A%A5.md#1">环球时报</a>》气疯，居然诅咒民主党败选，呼唤共和党回归？！</p>
-<p><ahref="https://github.com/wlaqea3326/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E5%85%9A%E5%AA%92.md#1">中共党媒</a>这一阵忙坏了，几大核心喉舌每天都有数篇雄文出台，咒骂美国、甚至直接谴责拜登政府。可能是饥不择食、慌不择路。《<ahref="https://github.com/wlaqea3326/djy/blob/master/gb/tag/%E4%BA%BA%E6%B0%91%E6%97%A5%E6%8A%A5.md#1">人民日报</a>》为了看起来言之有物，居然编造了一个瑞士科学家，结果10日被<ahref="https://github.com/wlaqea3326/djy/blob/master/gb/tag/%E7%91%9E%E5%A3%AB%E9%A9%BB%E5%8D%8E%E5%A4%A7%E4%BD%BF%E9%A6%86.md#1">瑞士驻华大使馆</a>辟谣打脸！</p>
-<p>《<ahref="https://github.com/wlaqea3326/djy/blob/master/gb/tag/%E7%8E%AF%E7%90%83%E6%97%B6%E6%8A%A5.md#1">环球时报</a>》也是闹够了笑话。为了自圆其说，居然给拜登政府安排了一个川普（特朗普）“婆婆”，而且还看起来无比怀念共和党执政时期，诅咒民主党败选。这智商，绝了！</p>
-<p><center><a title="YouTube video player" src=""></a><a href="https://git.io/JRKna"><img width="600" src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wlaqea3326/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/rF_WypJaqHE" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center></p>
+	<p>【大纪元2021年08月11日讯】大家好，现在是美东时间8月10日晚上6:30，北京时间8月11日。欢迎收看时事天天聊。我是秦鹏。</p>
+<p>今天焦点：《<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BA%BA%E6%B0%91%E6%97%A5%E6%8A%A5.md#1">人民日报</a>》编造出瑞士科学家，惨被<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%91%9E%E5%A3%AB%E9%A9%BB%E5%8D%8E%E5%A4%A7%E4%BD%BF%E9%A6%86.md#1">瑞士驻华大使馆</a>辟谣打脸！《<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%8E%AF%E7%90%83%E6%97%B6%E6%8A%A5.md#1">环球时报</a>》气疯，居然诅咒民主党败选，呼唤共和党回归？！</p>
+<p><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E5%85%9A%E5%AA%92.md#1">中共党媒</a>这一阵忙坏了，几大核心喉舌每天都有数篇雄文出台，咒骂美国、甚至直接谴责拜登政府。可能是饥不择食、慌不择路。《<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BA%BA%E6%B0%91%E6%97%A5%E6%8A%A5.md#1">人民日报</a>》为了看起来言之有物，居然编造了一个瑞士科学家，结果10日被<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%91%9E%E5%A3%AB%E9%A9%BB%E5%8D%8E%E5%A4%A7%E4%BD%BF%E9%A6%86.md#1">瑞士驻华大使馆</a>辟谣打脸！</p>
+<p>《<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%8E%AF%E7%90%83%E6%97%B6%E6%8A%A5.md#1">环球时报</a>》也是闹够了笑话。为了自圆其说，居然给拜登政府安排了一个川普（特朗普）“婆婆”，而且还看起来无比怀念共和党执政时期，诅咒民主党败选。这智商，绝了！</p>
+<p><center><a src=""></a><a href="https://divmj5v44rbg.cloudfront.net/V7zT9xBEb"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/268103d9-9058-4ba9-b9b2-4b8ffce3c9a7?r=16x9&amp;d=1467" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
 <h2>瑞士大使馆打脸《人民日报》 中国网民狂欢</h2>
 <p>8月2日，《人民日报》海外版发布了一篇假新闻《瑞士生物学家：新冠溯源成美攻击中国政治工具》，文章说，瑞士生物学家威尔逊?爱德瓦兹（Wilson Edwards），在社交媒体发文说，世卫组织和一些其他科学家向他表示，他们由于支持中国和世卫组织的病毒溯源报告，遭美国施压和恐吓。</p>
 <p>结果，8月10日，瑞士驻华大使馆的新浪微博官方账号发布了一个声明，说：第一，瑞士没有任何叫所谓的Wilson Edwards的公民；第二，他们查询发现“在生物学界没有任以该名字署名的学术文章”；第三，那个叫Wilson Edwards的脸书（Facebook）账号，7月24日才刚刚开通，至今仅发帖一条，账号好友只有三位，还说，该账号可能并非为网络社交而开设。</p>
@@ -18,49 +17,87 @@
 <p>最后一句话也比较客气，说媒体可能是无意间转发了该新闻，“但我们恳请您即刻删除并刊登更正声明”。这是要党妈公开道歉啊，这脸打得怎么样？</p>
 <p>当然，就引起了海内外网友的“狂欢”了。</p>
 <p>推特的彼得杨|@real_Peter_Yang就说：我去围观了瑞士Willison Edwards，十分地难以绷住。这个账号在7月24日之前，没有任何发言，甚至连头像都没有。他仅有的三个好友，从来都没有发过推文，并且每人都添加了一千多个好友。突然，他发了一条如裹脚布长的推文，然后再次沉寂。然后这人唯一的推文，不知怎么就被《人民日报》看到了。</p>
-<p>&#8230;&#8230;</p>
-<p>《<ahref="https://github.com/wlaqea3326/djy/blob/master/gb/tag/%E7%A7%A6%E9%B9%8F%E7%9B%B4%E6%92%AD.md#1">秦鹏直播</a>》制作组</p>
+<p>青涩韭菜花跟评：养的号，专门用来骗国内愚民的。之前被揭穿过很多次了，所以现在很多新闻对推特账号和昵称已经打码了。最有意思的是很多看起来为中国助威的外国人推号，没几个粉丝，而是还粉了不少粉红。造假技术太差了。</p>
+<p>当然，很快，网友就发现，瑞士驻华大使馆的声明已被有关部门没收转发键。中共中央网信办出手了。不是删贴，也不是下令《人民日报》删除文章，而是禁止了瑞士大使馆的新浪微博继续转发。</p>
+<p>当然，这挡不住越来越多的中国网民到大使馆这一条微博下面围观，下面的评论很欢乐：</p>
+<p>@丑丑和球球的铲屎官臭球：说你有就有，别不识抬举。<br />
+@离落的星辰：团团团团 是真的吗？<br />
+@14号线：ins上也发一下吧。<br />
+@Xiong_Ferguson：哈哈哈 人在家中坐，锅从天上来。<br />
+竹内忍：杜撰一个科学家，被瑞士大使馆澄清查无此人。又扬名国际了。<br />
+晓宇200510：瑞士到底有没有一个叫做Wilson Edwards的学者，不是瑞士这种小国说的算的。是我们种花家十四万万人说恶劣算的。<br />
+@rOCOCOXY：我们看不到脸书哎，没法知道你说的真假。<br />
+@Pantisic：那请问你有没有叫Weiwei Zhang的公民？</p>
+<p>最后一个网友的这一问，是关于复旦大学的最新给中共政治局常委们讲课的所谓的学者张维为的，因为网友发现，2010年，张维为当时以瑞士学者的名义，参加了中共组织的第四届世界中国学者圆桌论坛。</p>
+<p>这个话题之所以被网民提出来，是因为去年12月，网友@言真钦爆料：继“&#33879;名爱国教授”陈平被曝把女儿变成美国人并在美国安家后，现在又曝“&#33879;名爱国教授”张维为早就入籍瑞士，并以“瑞士学者”的身份来中国参加“圆桌会议”（详见下边的截图），原来做的都是爱国生意，并讽“难怪他们爱国爱党爱人民，爱得如此深切”。</p>
+<p>我个人是很怀疑张维为的国籍的，很可能当年中共为了鼓吹全世界都在研究中国，而故意招引了张维为冒充海外学者，制造一个万国来朝的虚假繁荣感。当然也可能他真的是瑞士籍的，只是人在海外，身在大陆狂赚人民币。这种人，中共的那些大五毛或很多专家或国师都是这样，包括我们之前说的司马南，上周五节目里面说的金灿荣等都是。</p>
+<p>我们发现，《人民日报》这个文章发表之后，中共核心党媒新华社、《环球时报》、中新社、参考消息，还有大陆主要的网络媒体新浪网、搜狐网、澎湃网、网易、腾讯网……都进行了转载。截至我们这个节目之前，这些文章大部分还在，这说明，这样的假新闻，是得到中央网信办支持的。</p>
+<h2>美获取武汉病毒基因库 中共疯狂攻击美国</h2>
+<p>那么这意味着什么呢？中共为什么不肯删除这些文章呢？</p>
+<p>就跟我们上周五那一期说的一样，美国获取了武汉病毒的可能高达22,000个样本的基因数据库，以及8月2日美国国会的共和党人的病毒溯源报告发布，都吓坏了中共最高层。因为这些证据，足以分析得出，病毒就是来自中共实验室的结论。</p>
+<p>这让中共做贼心虚，它很担心随着这些消息发酵，以及随后美国发布的报告，会引发中国网民对中共武汉病毒所散毒、中共隐瞒真相的愤怒，所以，中共采取的策略是，恶人先告状、先发制人，大肆给美国抹黑，每天都有不同核心党媒包括新华社、《人民日报》、《环球时报》、《科技日报》等等，都精选了最优秀的一批记者和编辑，每天各自编造一两篇文章骂美国，同时由中共网信办要求其它网络媒体进行转发和置顶、推荐等操作。而同时，中共外交部赵立坚，则不断地要求调查美军德特里克堡。</p>
+<p>这一波的炒作，已经进行了一个多星期了，瑞士大使馆这一次辟谣的那篇文章，就是《人民日报》8月2日发布的。目的呢，是把美国炒作成恶人，给中国民众打预防针，防止真相曝光，让中共的统治被动摇。</p>
+<p>不过，因为实在没有证据，所以<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E5%85%9A%E5%AA%92.md#1">中共党媒</a>采取的做法，就只能继续炒美国德特里克堡的冷饭和假新闻，以及干脆就编造。我和Iris上周五那一期，分析过美国德特里克堡的真相。大家有兴趣的可以去看看。</p>
+<p>至于为什么这一次是瑞士躺着中枪？Silent Freeman沉默的自由人说得很好：专门选择一个典型的中立国瑞士来捏造，以为瑞士会慑于匪国的墙大而咽下这个“哑巴亏”，结果人家压根不鸟墙匪。看看这回粉蛆们会抵制啥，会不会是永远也买不起的劳力士？</p>
+<p>当然，我们也都知道，中共核心媒体造谣已经是常态了，之前有过太多次前科。今年6月7日，意大利驻华大使馆也为此辟过谣。</p>
+<p>当时，中共党媒造谣也跟病毒溯源有关，6月7日，中共媒体报导说，意大利总理德拉吉接受采访首次承认，早在2019年夏天，新冠疫情就在意大利的米兰、热那亚以及威尼斯等北部地区开始流行。但是，经核查，意大利总理没有发表过类似言论，有关内容是杜撰的。</p>
+<p>我其实在核实这个消息的时候，感到惊讶的是，那些报导一看就是假话，说什么：“德拉吉呼吁美国、英国、加拿大、澳大利亚等国的政治领袖们，值此新冠病毒在全球愈演愈烈的关键时刻，不要再进行政治操。‘作为不可预估的天灾，人类唯有万众一心，众志成城，同仇敌忾，才有可能打败日益猖獗的新冠病毒。否则，新冠病毒有可能成为全人类的末日。’”</p>
+<p>这样的措辞，一看就是中共党媒口吻，所以大家看中国大陆新闻的时候，一定要小心，它们是真的什么都敢编，什么都敢说。</p>
+<p>这一次，瑞士大使馆不仅在新浪微博，还在推特上发表了相同的声明，所以，今天的网络很多人是靠看这个笑话度过愉快的一天的，用英语说叫 It made my day。</p>
+<p>这里面，有几个调侃伟大党，给党献计献策的，我觉得值得分享一下：</p>
+<p>德国网友@米福根：现在当务之急是制造一个名为Wilson Edwords的瑞士公民，颁发博士学位和生物科学家称号的工作中国自己可以搞定。</p>
+<p>她后来还说，“我想到了一个好办法：把瑞士大使馆的号删了，自力更生注册并认证一个瑞土大使馆号。然后就可以自由自在地向中国道歉，下跪，搧自己耳光，陪同Edwards大师出场，去各大高校巡回演讲，在黄金时间段对话央视名嘴，去人民大会堂受接见什么的。完美，太激动了，希望明天早上我的献计献策被祖国看到。”</p>
+<p>也有网友提醒：千万别惹瑞士方面生气，人要是以其人之道还治其人之身，把银行账户给销了，麻烦就大了[呲牙]</p>
+<p>另外，还有网友说，中共下次起名字认真一点，瑞士人叫这个名字的概率，就跟日本人叫刘建国一样低。</p>
+<p>苏格兰人@kespon99699说得很直白：Wilson Edwards这名字起得太Chinese了。都是我们耳熟能详的单词拼在一起的。</p>
+<h2>环时气疯 咒民主党败选</h2>
+<p>我还想聊一下《环球时报》的一个很可笑的文章《社评：美国疫情吃紧，栽赃中国更有动力》，因为把我给搞乐了。</p>
+<p>这个文章可笑在哪里呢？</p>
+<p>首先，它说，拜登政府对川普（特朗普）政府是“萧规曹随”。这是错误的说法。拜登政府是颠覆了上一届川普政府上来的，美国每个4年、8年就会这么颠覆了一次政府。而且，对当今美国有了解的人都知道，民主党和共和党两个政党在政策和理念上简直是南辕北辙，差异极大，共和党强调小政府、减少财政支出，不支持同性恋，而民主党全部反过来。</p>
+<p>美国两党，现在只有一项是共同的，那就是对中共的强硬。但是具体做法上也有很大差异：川普是瞄准中共不等于中国人民和马列主义破产等死穴猛打，拜登政府更多是和盟友合作、在技术等上面脱钩建设民主国家产业链，要把中共脖子上的绳子勒紧，逐步勒死。</p>
+<p>其次，这个文章可笑的地方是，它说，“特朗普政府虽然走了，但它是作为‘严厉的婆婆’走的，拜登政府的表现更像是生活在婆婆余威下的‘新媳妇’。”</p>
+<p>这个说法太可笑了，跟踪过美国大选的观众朋友们都懂得，川普这个“婆婆”都被赶走了，连推特都可以被永久停止，你确定这是婆婆的待遇吗？这完全是用中国式的中共领导人退而不休，毫无法纪，来骗中国老百姓不懂美国的政治生态：毛指定接班人，邓二次赶下总书记、一次给江泽民当婆婆、江泽民当了好几年小媳妇，一直到邓小平身体不好；而江泽民后来也如法炮制，胡温时代一直是被压制的小媳妇状态。</p>
+<p>所以，事实是，川普时代唤醒了美国和世界对中共的认识，而大瘟疫中，中共自己的所作所为，特别是掩盖、栽赃、造谣，以及趁机在香港、新疆和西藏以及台湾等迫害人权或者耀武扬威，则更加让世界触目惊心，发现中共原来如此之邪恶！</p>
+<p>所以，美国不管谁上台当总统，都已经不可能再对中共采取绥靖政策，对会对中共强硬。这才是事实，而不是因为什么川普是拜登的“婆婆”。</p>
+<p>《环球时报》这个文章，除了诅咒民主党明年中期选举会败选，还说“拜登政府超越前任政府搭起的最突出舞台就是在病毒溯源问题上疯狂攻击中国。特朗普政府时期没有明确这个打压中国的新方向，那时他们只是指控中国‘不透明’，另外有一些共和党州支持了民众的‘索赔’诉讼，拜登政府走得则要远多了。”</p>
+<p>好像共和党回来，或者川普回来，会放过中共似的。如果那样，我相信很多中国人愿意。</p>
+<p>由此可见，中共慌不择言到什么地步了？！已经被吓和气疯了。</p>
+<p>《<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A7%A6%E9%B9%8F%E7%9B%B4%E6%92%AD.md#1">秦鹏直播</a>》制作组</p>
 <p>责任编辑：李昊?#</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wlaqea3326/djy/blob/master/gb/21/8/4/n13139314.md#1">【秦鹏直播】中共停发护照 原因涉国家机密？</a></li>
-<li><a href="https://github.com/wlaqea3326/djy/blob/master/gb/21/8/5/n13142075.md#1">【秦鹏直播】一代史学大师谢世 终生反共获赞誉</a></li>
-<li><a href="https://github.com/wlaqea3326/djy/blob/master/gb/21/8/6/n13144805.md#1">【秦鹏直播】美获武汉病毒所基因库数据 中共恐慌</a></li>
-<li><a href="https://github.com/wlaqea3326/djy/blob/master/gb/21/8/9/n13150915.md#1">【秦鹏直播】东奥金牌榜被热议 北京冬奥遭抵制</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/8/4/n13139314.md#1">【秦鹏直播】中共停发护照 原因涉国家机密？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/8/5/n13142075.md#1">【秦鹏直播】一代史学大师谢世 终生反共获赞誉</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/8/6/n13144805.md#1">【秦鹏直播】美获武汉病毒所基因库数据 中共恐慌</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/8/9/n13150915.md#1">【秦鹏直播】东奥金牌榜被热议 北京冬奥遭抵制</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/wlaqea3326/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/29/n10003609.md#1" target="_blank">大逃港：哪里有自由，哪里就是我的祖国！</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/30/n11289569.md#1" target="_blank">纽约州六位参议员祝贺法轮大法日</a></li><hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/14/n9839893.md#1" target="_blank">郭婉莹——被遗忘的“上海公主”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/11/1/21/n3149437.md#1" target="_blank">追查国际关于天安门自焚伪案十年说明</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/5/n13141850.md#1">【未解之谜】画出天堂的神童</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/3/n13136702.md#1">【方菲访谈】专访李有甫：我的寻道之路</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/7/24/n13112797.md#1">病的背后有灵体？古今奇闻揭晓人体秘密</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/7/23/n13108844.md#1">【命理】诱骗妇孺家产 一家十几人皆死</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/6/24/n13044275.md#1">【医案】父亲节礼物</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/9/n13148894.md#1">【拍案惊奇】中共砸钱造金牌 多少选手下场凄惨</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/9/n13150763.md#1">【有冇搞错】毁掉中国首面奥运金牌的奇案</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/9/n13150804.md#1">【新闻看点】风暴袭北京 疫情严峻四千人支援扬州</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/7/26/n13117299.md#1">【东京奥运】奖牌榜及金牌榜（8月8日）</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/6/n13142391.md#1">除杂货外 Costco还出售8种意想不到的东西</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/7/n13145076.md#1">中俄军力对比 更现实的近邻威胁（三）</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/10/n13151042.md#1">曾受周星驰邀请演男孩 24岁女星徐娇近况曝光</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/7/n13146528.md#1">因不愿下跪遭中共撤三部戏 柯宇纶霸气回应</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/8/n13148300.md#1">为减肥只吃“一根面条” 黄晓明遭宁静吐槽</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/7/n13146718.md#1">林书豪接种疫苗后仍染疫 好友萧敬腾关心致意</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/9/n13149577.md#1">《不可能的任务7》将杀青 女星晒与阿汤哥合照</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/9/n13149029.md#1">伊朗空手道选手被踢倒在地 却“躺着拿金牌”</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/9/n13150639.md#1">很多人洗碗筷的方法错了！教你正确清洗妙招</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/6/n13144336.md#1">吃蔬菜可能出现血栓？服用一种药物者要小心</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/8/n13147196.md#1">美国女子被取消航班 结果中了百万美元乐透</a></li>
-<li><a href="https://github.com/liezrg346/djy/blob/master/gb/21/8/8/n13147903.md#1">罕见 400磅重鲟鱼从河面跃过垂钓者头顶</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11950860.md#1">以色列作家：真正的病毒是中共</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11950430.md#1">【现场视频】大风吹袭 京津冀多地起火</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11953240.md#1">台湾北部高中2人确诊中共肺炎 被迫全校停课</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11948757.md#1">【翻墙必看】剖析“中共病毒”毒性大发内幕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wlaqea3326/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wlaqea3326/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/10/n13153515.htm">【秦鹏直播】党媒造假被瑞士辟谣 环时也闹笑话</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/10/n13153515.htm">【秦鹏直播】党媒造假被瑞士揭穿 环时也闹笑话</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wlaqea3326/djy/blob/master/gb/21/8/10/n13153515.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wlaqea3326/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wlaqea3326/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wlaqea3326/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wlaqea3326/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlaqea3326/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/21/8/10/n13153515.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
